# ct-slicing

./: .gitignore  NiftyIO.py  PyCode_BasicSegmentation.py  README  README.md  S1_Visualization.py  VolumeCutBrowser.py  __main__.py  pyproject.toml  requirements.txt
ct_slicing/: BasicSegmentation.py  BrowseGaborFiltBank.py  Conv2D.py  PyCode_BasicSegmentation.py  Script_ImageDescriptors.py  Script_SegmentationValidation.py  Visualization.py  VolumeCutBrowser.py  VolumeFeaturesExtraction.py  __init__.py  __main__.py  _script_exercise_code.py  config.py  ct_logger.py  exercise_code.py  featuresExtraction.py  featuresExtractionSVM.py  get_data.py  image_process.py  l1_0_t_test_box_plot.py  l1_0_t_test_boxplots.py  l1_1_visualization.py  l2_1_basic_segmentation.py  l2_1_visualization.py  l2_2_svm.py  l2_2_t_test_boxplots.py  l3_1_basic_segmentation.py  l3_1_volume_features_extraction.py  l3_2_SliceFeaturesExtraction.py  l3_2_slice_features_extraction.py  l3_3_featuresExtraction.py  l3_3_features_extraction.py  l3_4_image_descriptors.py  l3_4_script_image_descriptors.py  l3_5_features_extraction.py  l3_5_features_extraction_svm.py  l3_5_gabor_filters.py  l3_6_browse_gabor_filt_bank.py  l3_6_conv_2d.py  l3_7_vgg_architecture.py  (+10 more)
ct_slicing/config/: FeaturesExtraction_Params.yaml  Params.yaml  data_path.py  dev_config.py  feature-extraction-param-3d.yaml
ct_slicing/data_check/: compare_ct_voi.py
ct_slicing/data_util/: _script-prepare-png.py  _script_check_data.py  compare_ct_voi.py  data_access.py  (+6 more)
data/: MetadatabyNoduleMaxVoting.xlsx  metadata.pickle  nodule_data.pickle
(+14 files in other folders)
