[tool.poetry]
name = "ct-slicing"
version = "0.1.0"
description = "visualization for ct slicing"
authors = ["PabloLION <36828324+PabloLION@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26.0"
simpleitk = "2.3.0"
matplotlib = "3.8.0"
scipy = "^1.11.3"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
xlsxwriter = "^3.1.9"
mayavi = "^4.8.1"
openpyxl = "^3.1.2"
pyqt5 = "^5.15.10"
torch = "^2.1.0"
torchvision = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
